<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/account_not_verified_tv_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@id/login_linear_layout"
        app:layout_constraintTop_toTopOf="parent" />



    <LinearLayout
        android:id="@+id/login_linear_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.399"
        tools:layout_editor_absoluteX="0dp">

        <TextView
            style="@style/text_views_style"
            android:text="@string/email_tv"
            android:id="@+id/login_email_tv"/>

        <EditText
            android:id="@+id/login_email"
            android:maxLines="1"
            android:inputType="textEmailAddress"
            style="@style/edit_text_views_style" />

        <TextView
            style="@style/text_views_style"
            android:text="@string/password_tv"
            android:id="@+id/login_password_tv"/>

        <EditText
            android:id="@+id/login_password"
            style="@style/edit_text_views_style"
            android:maxLines="1"
            android:inputType="textPassword" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/login_button"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:layout_gravity="center"
            android:layout_marginTop="48dp"
            android:text="@string/login_button"
            android:textColor="@color/primaryTextColor"
            app:elevation="4dp"
            />


    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>