<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login_signup_blue_gradient_bg">

    <TextView
        android:id="@+id/account_verification_tv_signup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/login_tv_bg"
        android:textColor="@color/secondaryTextColor"
        android:textSize="20sp"
        android:padding="5dp"
        android:textStyle="italic"
        app:layout_constraintBottom_toTopOf="@+id/cardView"
        app:layout_constraintTop_toTopOf="parent" />


    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:backgroundTint="@color/primaryColor"
        app:cardCornerRadius="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:id="@+id/login_linear_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.399">

            <TextView
                android:id="@+id/sign_up_email_tv"
                style="@style/text_views_style"
                android:text="@string/email_tv"
                android:textColor="@color/primaryTextColor" />

            <EditText
                android:id="@+id/sign_up_email"
                style="@style/edit_text_views_style"
                android:background="@drawable/dialog_bg"
                android:paddingStart="15dp"
                tools:text="anas43950@gmail.com"
                android:paddingEnd="15dp"
                android:inputType="textEmailAddress"
                android:maxLines="1"
                app:backgroundTint="@android:color/darker_gray" />

            <TextView
                android:id="@+id/sign_up_password_tv"
                style="@style/text_views_style"
                android:text="@string/password_tv"
                android:textColor="@color/primaryTextColor" />

            <EditText
                android:id="@+id/sign_up_password"
                style="@style/edit_text_views_style"
                android:background="@drawable/dialog_bg"
                android:inputType="textPassword"
                android:paddingStart="15dp"
                android:paddingEnd="15dp"
                android:maxLines="1"
                app:backgroundTint="@android:color/darker_gray" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/sign_up_button"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:layout_marginTop="48dp"
                android:text="@string/sign_up_button"
                android:textColor="@android:color/black"
                android:textSize="24sp"
                android:textStyle="bold"
                app:backgroundTint="@android:color/white"
                app:cornerRadius="10dp" />

            <TextView
                android:id="@+id/login_instead_tv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:gravity="end"
                android:textColor="@android:color/white" />


        </LinearLayout>
    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>